Camel: Add a missing header include into camel-hostname-utils.c
Hi. When compiling e-d-s on mandriva I see this build error:
/builddir/build/BUILD/evolution-data-server-3.42.1/src/camel/camel-hostname-utils.c:662:2: error: implicit declaration of function 'u_strFromUTF8' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
DEBUG util.py:634: u_strFromUTF8 (NULL, 0, &uhost_len, hostname, -1, &uerror);
DEBUG util.py:634: ^
DEBUG util.py:634: 1 error generated.
DEBUG util.py:634: make[2]: *** [src/camel/CMakeFiles/camel.dir/build.make:401: src/camel/CMakeFiles/camel.dir/camel-hostname-utils.c.o] Error 1
DEBUG util.py:634: make[2]: *** Waiting for unfinished jobs....
Full build log: https://file-store.openmandriva.org/api/v1/file_stores/53144bc08add47a504794ad36e2482fdb6f72d0b.log?show=true
- OS: OpenMandriva Cooker
- Compiler: LLVM/Clang 13.0.0
- LTO: enabled
Build options:
- -DENABLE_VALA_BINDINGS=1
- -DENABLE_INTROSPECTION=ON
- -DENABLE_UOA=OFF
- -DWITH_LIBDB=%{_prefix}
- -DCMAKE_INSTALL_LIBDIR:PATH=%{_libdir} \
- -DLIB_INSTALL_DIR:PATH=%{_libdir}
Edited by Milan Crha