I#364 - Camel: Add a missing header include into camel-hostname-utils.c

Change suggested by Rainer Herzog.

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/364